--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,14 +1,19 @@
 {
-  "name": "video-gol",
-  "short_name": "video-gol",
+  "name": "Video Gol",
+  "short_name": "VideoGol",
   "icons": [
     {
-      "src": "/img/icons/android-chrome-192x192.png",
+      "src": "/img/icons/android-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/img/icons/android-chrome-512x512.png",
+      "src": "/img/icons/android-360x360.png",
+      "sizes": "360x360",
+      "type": "image/png"
+    },
+    {
+      "src": "/img/icons/android-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
@@ -16,5 +21,5 @@
   "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#000000",
-  "theme_color": "#4DBA87"
+  "theme_color": "#1a8500"
 }
